--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,19 +1,24 @@
 - title: Wouter De Loose on Twitter
   href: https://twitter.com/woutr_be
   icon: fa fa-twitter
+  target: _blank
 
 - title: Wouter De Loose on LinkedIn
   href: https://hk.linkedin.com/in/woutrbe
   icon: fa fa-linkedin
+  target: _blank
 
 - title: Wouter De loose on Github
   href: https://github.com/woutrbe
   icon: fa fa-github
+  target: _blank
 
 - title: Wouter De Loose on Dribbble
   href: https://dribbble.com/woutr_be
   icon: fa fa-dribbble
+  target: _blank
 
 - title: Send me an email
   href: mailto:wouter@woutr.me?subject=Hi
   icon: fa fa-envelope
+  target: _self
