--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Wouter De Loose
 email: wouter@woutr.me
 description: Product focussed developer with a full-stack background living in Hong Kong.
 baseurl: ""
-url: "http://woutr.me"
+url: "https://woutr.me"
 
 # Build settings
 markdown: kramdown
