--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,7 +1,7 @@
-- title: Wouter De Loose on Twitter
-  href: https://twitter.com/woutr_be
-  icon: fa fa-twitter
-  target: _blank
+# - title: Wouter De Loose on Twitter
+#   href: https://twitter.com/woutr_be
+#   icon: fa fa-twitter
+#   target: _blank
 
 - title: Wouter De Loose on LinkedIn
   href: https://hk.linkedin.com/in/woutrbe
